# Totem

./: README.md
src/: index.html  main.js  main.txt  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
